--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Simon McCartney <smccartney@axon.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+terraplanfeed = "^0.9.2"
+jmespath = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
