--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,13 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
+    -   id: check-merge-conflict
     -   id: check-added-large-files
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
     -   id: flake8
+        additional_dependencies: [flake8-bugbear, pep8-naming]
 -   repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
