--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^5.2"
 pytest-cov = "^3.0.0"
 mypy = "^0.910"
 isort = "^5.10.1"
+flake8-bugbear = "^21.11.29"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
