--- a/examples/terragrunt/Makefile
+++ b/examples/terragrunt/Makefile
@@ -14,4 +14,4 @@ stage2:
 	terragrunt apply -auto-approve
 
 clean:
-	@rm -rf .terraform plan.out plan.json .terraform.lock.hcl terraform.tfstate terraform.tfstate.*.backup terraform.tf
+	@rm -rf .terraform plan.out plan.json foo.bar .terraform.lock.hcl terraform.tfstate terraform.tfstate.*.backup terraform.tf
