rename pypi project name to terraform-transform to avoid clash with public tftf project

--- a/examples/terraform/Makefile
+++ b/examples/terraform/Makefile
@@ -13,7 +13,7 @@ stage2:
 	ln -s terraform.tf-stage2 terraform.tf
 	terraform plan -out=plan.out
 	terraform show -json plan.out > plan.json
-	tftf apply --plan plan.json --transformations transformations.json
+	tf-tf apply --plan plan.json --transformations transformations.json
 	terraform plan -detailed-exitcode
 
 clean:
