Ensure correct version of terraform is installed for examples/

--- a/examples/terraform/Makefile
+++ b/examples/terraform/Makefile
@@ -1,6 +1,12 @@
+TERRAFORM_REQUIRED_VERSION := 1.1.3
+TERRAFORM_INSTALLED_VERSION := $(shell terraform version 2>/dev/null | perl -n -e 'print $$1 if /Terraform v(\d+.\d+.\d+)/')
+
 .PHONY: clean
 
-test: clean stage1 stage2
+test: tfenv clean stage1 stage2
+
+tfenv:
+	if [ "${TERRAFORM_REQUIRED_VERSION}" != "${TERRAFORM_INSTALLED_VERSION}" ] && command -v tfenv > /dev/null ; then tfenv install ${TERRAFORM_REQUIRED_VERSION} && tfenv use ${TERRAFORM_REQUIRED_VERSION}; fi
 
 stage1:
 	@rm -f terraform.tf
