--- a/examples/terragrunt/Makefile
+++ b/examples/terragrunt/Makefile
@@ -1,6 +1,11 @@
-.PHONY: clean
+TERRAFORM_REQUIRED_VERSION := 1.1.3
+TERRAFORM_INSTALLED_VERSION := $(shell terraform version 2>/dev/null | perl -n -e 'print $$1 if /Terraform v(\d+.\d+.\d+)/')
 
 test: clean stage1 stage2
+
+tfenv:
+	if [ "${TERRAFORM_REQUIRED_VERSION}" != "${TERRAFORM_INSTALLED_VERSION}" ] && command -v tfenv > /dev/null ; then tfenv install ${TERRAFORM_REQUIRED_VERSION} && tfenv use ${TERRAFORM_REQUIRED_VERSION}; fi
+
 
 stage1:
 	@rm -f terraform.tf
